# organism

./: .gitignore  Cargo.toml  README.md  args.txt  play  run  write
assets/samples/: mkbank
src/: bnk.rs  main.rs  org.rs  playback.rs  stuff.rs
