[package]
name = "organism"
version = "0.3.0"
authors = ["Luna Catkins <lunarlambda@gmail.com>"]
edition = "2018"
description = "A high-accuracy Organya to WAV conversion tool"
homepage = "https://gitdab.com/LunarLambda/organism"
repository = "https://gitdab.com/LunarLambda/organism"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
byteorder = "1.3"
